processed/gerrit/txt/63216.txt
Change:     63216
Subject:    LU-19748 gni: build fixes for gni
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/63216
Change-Id:  I16dd895b2ba5a6322a0c629b083760ed930b659f
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2026-01-02 12:34:01.000000000
Updated:    2026-02-17 19:30:58.000000000
Patch Set:  8
Insertions: +11
Deletions:  -7
Comments:   12 (2 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Alexander Zarochentsev: +1; Andreas Dilger: +1; Mikhail Pershin: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Mikhail Pershin, James Simmons, Alexander Zarochentsev, Timothy Day

--- Commit Message ---
LU-19748 gni: build fixes for gni

libcfs/linux/linux-mem.h -> lustre_compat/linux/linux-mem.h
libcfs/linux/linux-misc.h -> lustre_compat/linux/linux-misc.h

__ll_vmalloc() -> __compat_vmalloc()

missing semi-colon after:
  ENUM2STR(GNI_RC_SUCCESS)

GNI needs to include:
  lustre_compat/linux/timer.h
  linux/libcfs/libcfs_fail.h

Build fix: -Werror=maybe-uninitialized

  .../lustre/mgc/mgc_request.c: In function 'mgc_create_new_conn':
  .../include/linux/libcfs/libcfs_debug.h:122:3: error: 'rc' may be
  used uninitialized in this function [-Werror=maybe-uninitialized]

      libcfs_debug_msg(&msgdata, format, ## __VA_ARGS__);
      ^~~~~~~~~~~~~~~~
  .../lustre/mgc/mgc_request.c:1208:6: note: 'rc' was declared here
     int rc;
         ^~

HPE-bug-id: LUS-13154
Test-Parameters: trivial
Fixes: a050dfb80dd5 ("LU-19229 mgc: client to handle IR with unknown nets")
Fixes: dbf4d41d9879 ("LU-18687 libcfs: move include to top-level)"
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I16dd895b2ba5a6322a0c629b083760ed930b659f
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63216
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>

--- Review History ---

--- Message (Shaun Tancheff, 2026-01-02 12:34:01.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-02 12:44:32.000000000) ---
Patch Set 1:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (wc-checkpatch, 2026-01-02 12:47:14.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2026-01-02 13:59:57.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/120099/ : SUCCESS

--- Message (Timothy Day, 2026-01-02 16:58:14.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Andreas Dilger, 2026-01-02 17:53:42.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

--- Message (Shaun Tancheff, 2026-01-03 04:05:49.000000000) ---
Uploaded patch set 2: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (wc-checkpatch, 2026-01-03 04:12:28.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-03 04:13:37.000000000) ---
Patch Set 2:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (jenkins, 2026-01-03 04:55:00.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/120102/ : SUCCESS

--- Message (James Simmons, 2026-01-05 15:15:44.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Simmons, 2026-01-05 17:05:05.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Timothy Day, 2026-01-14 02:59:16.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2026-01-15 02:46:46.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2026-01-28 05:31:51.000000000) ---
Patch Set 2: -Code-Review

(1 comment)

--- Message (Oleg Drokin, 2026-01-28 05:32:27.000000000) ---
Patch Set 2: Code-Review-1

(1 comment)

--- Message (Shaun Tancheff, 2026-01-28 06:08:04.000000000) ---
Uploaded patch set 3.

Outdated Votes:
* Code-Review+1, Code-Review-1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-28 06:12:02.000000000) ---
Patch Set 3:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (wc-checkpatch, 2026-01-28 06:13:44.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Shaun Tancheff, 2026-01-28 06:26:22.000000000) ---
Uploaded patch set 4: Patch Set 3 was rebased.

--- Message (jenkins, 2026-01-28 06:27:57.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/120957/ : ABORTED

--- Message (wc-checkpatch, 2026-01-28 06:29:05.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-28 06:30:58.000000000) ---
Patch Set 4:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (jenkins, 2026-01-28 08:47:11.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/120958/ : SUCCESS

--- Message (Shaun Tancheff, 2026-02-01 05:23:37.000000000) ---
Patch Set 5: Commit message was updated.

Copied Votes:
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-02-01 05:28:01.000000000) ---
Patch Set 5:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (wc-checkpatch, 2026-02-01 05:32:08.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (jenkins, 2026-02-01 05:51:40.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/121122/ : SUCCESS

--- Message (Autotest, 2026-02-02 01:35:40.000000000) ---
Patch Set 5:

Trevis Autotest 2 retesting enforced review-dne-part-2 session on el9.5-x86_64/ldiskfs servers and clients for build 121122 patch 5. Requested by stancheff because of LU-17891.

--- Message (Alexander Zarochentsev, 2026-02-04 10:19:52.000000000) ---
Patch Set 5: Code-Review+1

--- Message (Shaun Tancheff, 2026-02-05 08:46:32.000000000) ---
Uploaded patch set 6.

Outdated Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE")

--- Message (Shaun Tancheff, 2026-02-05 08:48:07.000000000) ---
Patch Set 6:

(1 comment)

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-02-05 08:53:56.000000000) ---
Patch Set 6:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (wc-checkpatch, 2026-02-05 08:57:51.000000000) ---
Patch Set 6:

Looks good to me.

--- Message (Mikhail Pershin, 2026-02-05 09:02:27.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Andreas Dilger, 2026-02-05 11:30:12.000000000) ---
Patch Set 6: Code-Review+1

--- Message (Shaun Tancheff, 2026-02-06 05:31:36.000000000) ---
Patch Set 6:

(1 comment)

--- Message (jenkins, 2026-02-06 06:24:00.000000000) ---
Patch Set 6: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/121299/ : SUCCESS

--- Message (Alexander Zarochentsev, 2026-02-06 08:43:58.000000000) ---
Patch Set 6: Code-Review+1

--- Message (jenkins, 2026-02-06 15:02:45.000000000) ---
Patch Set 6: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/121325/ : FAILURE

--- Message (Charlie Olmstead, 2026-02-06 22:36:36.000000000) ---
Patch Set 6:

(1 comment)

--- Message (jenkins, 2026-02-07 01:50:50.000000000) ---
Patch Set 6: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/121377/ : SUCCESS

--- Message (Charlie Olmstead, 2026-02-09 14:13:28.000000000) ---
Removed cc <GERRIT_ACCOUNT_430>.

--- Message (James Simmons, 2026-02-09 14:17:45.000000000) ---
Patch Set 6:

(1 comment)

--- Message (James Simmons, 2026-02-10 01:41:24.000000000) ---
Patch Set 6: Code-Review+1

(1 comment)

--- Message (Shaun Tancheff, 2026-02-10 02:11:57.000000000) ---
Patch Set 7: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (wc-checkpatch, 2026-02-10 02:12:56.000000000) ---
Patch Set 7:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-02-10 02:14:52.000000000) ---
Patch Set 7:

Code-wise looks good to me, 1 warnings less than parent.

--- Message (jenkins, 2026-02-10 02:38:33.000000000) ---
Patch Set 7: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/121471/ : SUCCESS

--- Message (Oleg Drokin, 2026-02-17 19:30:35.000000000) ---
Patch Set 7:

(1 comment)

--- Message (Oleg Drokin, 2026-02-17 19:30:49.000000000) ---
Patch Set 7: Code-Review+2

--- Message (Oleg Drokin, 2026-02-17 19:30:58.000000000) ---
Change has been successfully cherry-picked as cd049d0a0d3c5124f5fa927ecc757e9de7fc9b6b
